deployment-2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-https-ssl
  labels:
    app: nginx-hs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-hs
  template:
    metadata:
      labels:
        app: nginx-hs
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-html
          mountPath: /usr/share/nginx/html
      volumes:
      - name: nginx-html
        configMap:
          name: myconfigmap
          items:
          - key: "index.html"
            path: "index.html"
