svc-2.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-ng
spec:
  selector:
    app: nginx-hs
  ports:
    - name: nginx
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
