svc.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-ngmu
spec:
  selector:
    app: nginx-multi
  ports:
    - name: nginx
      protocol: TCP
      port: 80
      targetPort: 80
    - name: multitool
      protocol: TCP
      port: 8080
      targetPort: 9080
  type: ClusterIP
